# train_problems_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
informatics/binary_search/binary_search_with_answer/: task_B.cpp  task_C.cpp  task_E.cpp
informatics/quadratic_sortings/: task_A.cpp  task_B.cpp  task_C.cpp  task_E.cpp  task_F.cpp
stepik/programming_on_cpp/second_module/: tasks_2_3.cpp  tasks_2_4.cpp  tasks_2_6.cpp  tasks_2_7.cpp
stepik/programming_on_cpp/third_module/: tasks_3_3.cpp  tasks_3_5.cpp
